--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 <title>Aung Si Min Htet</title>
+<meta property="og:title" content="Aung Si Min Htet | Resume">
+<meta name="twitter:title" content="Aung Si Min Htet | Resume">
+  
+<meta name="description" content="Computer Vision Research Engineer">
+<meta property="og:description" content="Computer Vision Research Engineer">
+<meta name="twitter:description" content="Computer Vision Research Engineer">
+  
+<meta property="og:image" content="img/portfolio/1605326623919.jpeg">
+<meta name="twitter:image" content="img/portfolio/1605326623919.jpeg">
 
 <!-- STYLES -->
 <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
